--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.2",
     "react-redux": "^7.2.6",
-    "react-scripts": "5.0.0",
-    "typescript": "^4.1.6"
+    "react-scripts": "5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,5 +42,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.4"
   }
 }
