--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.5",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -15,12 +16,18 @@
     "@types/react": "^16.14.21",
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.20",
+    "axios": "^0.24.0",
+    "colorthief": "^2.3.2",
     "framer-motion": "^5.5.5",
+    "node-vibrant": "^3.2.1-alpha.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.22.2",
+    "react-hook-form": "^7.22.5",
+    "react-palette": "^1.0.2",
     "react-redux": "^7.2.6",
-    "react-scripts": "5.0.0"
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "5.0.0",
+    "use-image-color": "0.0.9"
   },
   "scripts": {
     "start": "react-scripts start",
