--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "framer-motion": "^5.5.5",
     "node-vibrant": "^3.2.1-alpha.1",
     "react": "^17.0.2",
+    "react-cropper": "^2.1.8",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.5",
+    "react-image-file-resizer": "^0.4.7",
     "react-palette": "^1.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
