--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.20",
     "axios": "^0.24.0",
+    "buffer": "^6.0.3",
     "cloudinary-react": "^1.7.0",
     "colorthief": "^2.3.2",
     "framer-motion": "^5.5.5",
