--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/jest": "^24.9.1",
     "@types/node": "^12.20.38",
     "@types/react": "^16.14.21",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.20",
     "axios": "^0.24.0",
@@ -23,6 +24,7 @@
     "framer-motion": "^5.5.5",
     "node-vibrant": "^3.2.1-alpha.1",
     "react": "^17.0.2",
+    "react-color": "^2.19.3",
     "react-cropper": "^2.1.8",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.5",
