--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-hook-form": "^7.22.5",
     "react-image-file-resizer": "^0.4.7",
     "react-palette": "^1.0.2",
+    "react-paypal-button-v2": "^2.6.3",
     "react-qr-code": "^2.0.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
