--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-color": "^2.19.3",
     "react-cropper": "^2.1.8",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-hook-form": "^7.22.5",
     "react-image-file-resizer": "^0.4.7",
     "react-palette": "^1.0.2",
