--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "buffer": "^6.0.3",
     "cloudinary-react": "^1.7.0",
     "colorthief": "^2.3.2",
+    "date-fns": "^2.28.0",
     "framer-motion": "^5.5.5",
     "node-vibrant": "^3.2.1-alpha.1",
     "react": "^17.0.2",
